--- a/RecognizeImage/Base.lproj/Main.storyboard
+++ b/RecognizeImage/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +12,73 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RecognizeImage" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Result" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xB0-f0-EJU">
+                                <rect key="frame" x="163" y="340" width="48" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7fg-YP-pfz">
+                                <rect key="frame" x="146" y="627" width="83" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="zlV-z5-JZu"/>
+                                </constraints>
+                                <state key="normal" title="Use Model2"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Woc-bF-SjY">
+                                <rect key="frame" x="147" y="567" width="81" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="MJm-fi-UQl"/>
+                                </constraints>
+                                <state key="normal" title="Use Model1"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FhL-Bh-MTR">
+                                <rect key="frame" x="156.5" y="280" width="62" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="tgu-ws-jjs"/>
+                                </constraints>
+                                <state key="normal" title="画像選択"/>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jqO-Wt-vNS">
+                                <rect key="frame" x="67" y="20" width="240" height="240"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="BnW-mp-gbz"/>
+                                    <constraint firstAttribute="width" constant="240" id="yF0-7f-4GX"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="jqO-Wt-vNS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="31S-iB-BQe"/>
+                            <constraint firstItem="7fg-YP-pfz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3pW-5C-7uQ"/>
+                            <constraint firstItem="xB0-f0-EJU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4h1-nA-2m6"/>
+                            <constraint firstItem="xB0-f0-EJU" firstAttribute="top" secondItem="FhL-Bh-MTR" secondAttribute="bottom" constant="20" id="8ir-i3-uKk"/>
+                            <constraint firstItem="7fg-YP-pfz" firstAttribute="top" secondItem="Woc-bF-SjY" secondAttribute="bottom" constant="20" id="o8p-4g-XMf"/>
+                            <constraint firstItem="FhL-Bh-MTR" firstAttribute="top" secondItem="jqO-Wt-vNS" secondAttribute="bottom" constant="20" id="p5g-ci-qp4"/>
+                            <constraint firstItem="FhL-Bh-MTR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="s95-0K-YoG"/>
+                            <constraint firstItem="7fg-YP-pfz" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="uiC-G6-5hi"/>
+                            <constraint firstItem="Woc-bF-SjY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="x2U-32-L9L"/>
+                            <constraint firstItem="jqO-Wt-vNS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="z4J-6l-FYL"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="outputLabel" destination="xB0-f0-EJU" id="Cfm-dn-RAe"/>
+                        <outlet property="selectImageButton" destination="FhL-Bh-MTR" id="Qgd-yq-vey"/>
+                        <outlet property="selectedImageView" destination="jqO-Wt-vNS" id="gIe-gS-Gun"/>
+                        <outlet property="useModel1Button" destination="Woc-bF-SjY" id="eno-pv-jjP"/>
+                        <outlet property="useModel2Button" destination="7fg-YP-pfz" id="1L6-pC-WtW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="116" y="117.39130434782609"/>
         </scene>
     </scenes>
 </document>
